resolved media spc issue
